force-app/main/default/objects/Detalles_Master__c/fields/Agente_Ultima_Milla__c.field-meta.xml
<CustomField>
    <fullName>Agente_Ultima_Milla__c</fullName>
    <label>Agente Ultima Milla</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fedex</fullName>
                <label>FEDEX</label>
            </value>
            <value>
                <fullName>Chilexpress</fullName>
                <label>CXP</label>
            </value>
            <value>
                <fullName>Starken</fullName>
                <label>STARKEN</label>
            </value>
            <value>
                <fullName>Blue Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>