force-app/main/default/objects/Detalles_Master__c/fields/Bag_Code__c.field-meta.xml
<CustomField>
    <fullName>Bag_Code__c</fullName>
    <label>Bag Code</label>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Detalles Guías</relationshipLabel>
    <relationshipName>Detalles_Gu_as</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>