force-app/main/default/objects/Detalles_Master__c/fields/C_digo_validaci_n_F09__c.field-meta.xml
<CustomField>
    <fullName>C_digo_validaci_n_F09__c</fullName>
    <label>Código validación F09</label>
    <length>50</length>
    <type>Text</type>
</CustomField>