force-app/main/default/objects/Detalles_Master__c/fields/Ciudad_Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Consignatario__c</fullName>
    <label>Ciudad Consignatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>