force-app/main/default/objects/Detalles_Master__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <label>Client Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>