force-app/main/default/objects/Detalles_Master__c/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <description>Ciudad destinatario</description>
    <label>Comuna</label>
    <length>50</length>
    <type>Text</type>
</CustomField>