force-app/main/default/objects/Detalles_Master__c/fields/Condicion__c.field-meta.xml
<CustomField>
    <fullName>Condicion__c</fullName>
    <description>DDP/DDU</description>
    <label>Condicion</label>
    <type>TextArea</type>
</CustomField>