force-app/main/default/objects/Detalles_Master__c/fields/Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Consignatario__c</fullName>
    <description>Nombre destinatario</description>
    <label>Consignatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>