force-app/main/default/objects/Detalles_Master__c/fields/Consignee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Phone__c</fullName>
    <description>Teléfono destinatario</description>
    <label>Consignee Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>