force-app/main/default/objects/Detalles_Master__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>