force-app/main/default/objects/Detalles_Master__c/fields/Destination_Generic_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Generic_Postal_Code__c</fullName>
    <label>Destination Generic Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>