force-app/main/default/objects/Detalles_Master__c/fields/DIPS_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>DIPS_Amount_USD__c</fullName>
    <label>DIPS Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>