force-app/main/default/objects/Detalles_Master__c/fields/Direccion_Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Consignatario__c</fullName>
    <description>Dirección destinatario</description>
    <label>Dirección Consignatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>