force-app/main/default/objects/Detalles_Master__c/fields/Direccion_Normalizada__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Normalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direccion_Normalizada</label>
    <type>Checkbox</type>
</CustomField>