force-app/main/default/objects/Detalles_Master__c/fields/Enviado_a_Correo__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_Correo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado a Correo</label>
    <type>Checkbox</type>
</CustomField>