force-app/main/default/objects/Detalles_Master__c/fields/Estado_Actualizacion_MailAmerica__c.field-meta.xml
<CustomField>
    <fullName>Estado_Actualizacion_MailAmerica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estado Actualización MailAmerica</label>
    <type>Checkbox</type>
</CustomField>