force-app/main/default/objects/Detalles_Master__c/fields/Estado_Aduana__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aduana__c</fullName>
    <label>Estado Aduana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>