force-app/main/default/objects/Detalles_Master__c/fields/Estado_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cliente__c</fullName>
    <label>Estado Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recepcionado en Chile</fullName>
            </value>
            <value>
                <fullName>En proceso Aduana</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>En Tránsito a Centro de Distribución</fullName>
            </value>
            <value>
                <fullName>Entregado a Correos de Chile</fullName>
            </value>
            <value>
                <fullName>Entregado a Blue Express</fullName>
            </value>
            <value>
                <fullName>Entregado a Chilexpress</fullName>
            </value>
            <value>
                <fullName>Parcel arrived at terminal warehouse at destination country</fullName>
            </value>
            <value>
                <fullName>Parcel completed Customs Clearance at destination country</fullName>
            </value>
            <value>
                <fullName>Entregado a Starken</fullName>
            </value>
            <value>
                <fullName>Entregado a Chazki</fullName>
            </value>
            <value>
                <fullName>Entregado a WSP</fullName>
            </value>
            <value>
                <fullName>In processing of customs clearance formalities</fullName>
            </value>
            <value>
                <fullName>Documentation classified at Customs</fullName>
            </value>
            <value>
                <fullName>Parcel transferred to last mile operator CXP</fullName>
            </value>
            <value>
                <fullName>Parcel transferred to last mile operator WSP</fullName>
            </value>
            <value>
                <fullName>Parcel transferred to last mile operator STK</fullName>
            </value>
            <value>
                <fullName>Parcel transferred to last mile operator Easy</fullName>
            </value>
            <value>
                <fullName>Entregado a operador de última milla</fullName>
            </value>
            <value>
                <fullName>En centro de distribución para reparto</fullName>
            </value>
            <value>
                <fullName>En reparto</fullName>
            </value>
            <value>
                <fullName>Entregado a cliente final</fullName>
            </value>
            <value>
                <fullName>Cliente no estaba en dirección</fullName>
            </value>
            <value>
                <fullName>Recepcionado en central HOT Express</fullName>
            </value>
            <value>
                <fullName>Entregado a Fedex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>