force-app/main/default/objects/Detalles_Master__c/fields/Estado_Correo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Correo__c</fullName>
    <label>Estado Correo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>