force-app/main/default/objects/Detalles_Master__c/fields/Estado_Guia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Guia__c</fullName>
    <label>Estado Guía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documental</fullName>
            </value>
            <value>
                <fullName>Menor a 30</fullName>
            </value>
            <value>
                <fullName>Facturada</fullName>
            </value>
            <value>
                <fullName>Abandonado</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
            <value>
                <fullName>Retenido por RUT</fullName>
            </value>
            <value>
                <fullName>Retenido por Aduana</fullName>
            </value>
            <value>
                <fullName>Retenido por Visación</fullName>
            </value>
            <value>
                <fullName>Retenido en escaner</fullName>
            </value>
            <value>
                <fullName>En cadena de custodia</fullName>
            </value>
            <value>
                <fullName>Paquete No Recibido</fullName>
            </value>
            <value>
                <fullName>Retenido por error ISP</fullName>
            </value>
            <value>
                <fullName>Retenido por peso</fullName>
            </value>
            <value>
                <fullName>Sobrante</fullName>
            </value>
            <value>
                <fullName>Alto valor</fullName>
            </value>
            <value>
                <fullName>RUT no conseguido Retenido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>