force-app/main/default/objects/Detalles_Master__c/fields/Estado_IVA__c.field-meta.xml
<CustomField>
    <fullName>Estado_IVA__c</fullName>
    <label>Estado IVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D-IN</fullName>
            </value>
            <value>
                <fullName>D-NG</fullName>
            </value>
            <value>
                <fullName>L-IS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>