force-app/main/default/objects/Detalles_Master__c/fields/Factor_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Factor_Pieces__c</fullName>
    <label>Factor Pieces</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>