force-app/main/default/objects/Detalles_Master__c/fields/Fecha_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Entrega__c</fullName>
    <label>Fecha de Entrega</label>
    <type>Date</type>
</CustomField>