force-app/main/default/objects/Detalles_Master__c/fields/Fecha_Estado_Actualizaci_n_MailAmerica__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estado_Actualizaci_n_MailAmerica__c</fullName>
    <description>Corresponde a la fecha en que MailAmerica actualizó el rut</description>
    <inlineHelpText>Corresponde a la fecha en que MailAmerica actualizó el rut</inlineHelpText>
    <label>Fecha Estado Actualización MailAmerica</label>
    <type>DateTime</type>
</CustomField>