force-app/main/default/objects/Detalles_Master__c/fields/Flete__c.field-meta.xml
<CustomField>
    <fullName>Flete__c</fullName>
    <label>Flete</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>