force-app/main/default/objects/Detalles_Master__c/fields/HD_PUDO__c.field-meta.xml
<CustomField>
    <fullName>HD_PUDO__c</fullName>
    <label>HD-PUDO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>PUDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>