force-app/main/default/objects/Detalles_Master__c/fields/Hora_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_entrega__c</fullName>
    <label>Hora de entrega</label>
    <type>Time</type>
</CustomField>