force-app/main/default/objects/Detalles_Master__c/fields/ID_empresa__c.field-meta.xml
<CustomField>
    <fullName>ID_empresa__c</fullName>
    <label>ID empresa</label>
    <length>3</length>
    <type>Text</type>
</CustomField>