force-app/main/default/objects/Detalles_Master__c/fields/ID_Tipo__c.field-meta.xml
<CustomField>
    <fullName>ID_Tipo__c</fullName>
    <label>ID Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>