force-app/main/default/objects/Detalles_Master__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>Master</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipName>Detalles_Manifiestos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>