force-app/main/default/objects/Detalles_Master__c/fields/Monto_DIP__c.field-meta.xml
<CustomField>
    <fullName>Monto_DIP__c</fullName>
    <label>Monto DIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>