force-app/main/default/objects/Detalles_Master__c/fields/N_DIP__c.field-meta.xml
<CustomField>
    <fullName>N_DIP__c</fullName>
    <label>Nº DIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>