force-app/main/default/objects/Detalles_Master__c/fields/Nombre_Receptor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Receptor__c</fullName>
    <label>Nombre Receptor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>