force-app/main/default/objects/Detalles_Master__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Código postal destinatario</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>