force-app/main/default/objects/Detalles_Master__c/fields/Proceso_F09__c.field-meta.xml
<CustomField>
    <fullName>Proceso_F09__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seleccionar si guía tiene proceso F09 por abandono</description>
    <label>Proceso F09</label>
    <type>Checkbox</type>
</CustomField>