force-app/main/default/objects/Detalles_Master__c/fields/Rut_Consignatario__c.field-meta.xml
<CustomField>
    <fullName>Rut_Consignatario__c</fullName>
    <label>Rut Consignatario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>