force-app/main/default/objects/Detalles_Master__c/fields/Shipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Code__c</fullName>
    <description>Código de envío</description>
    <label>Shipment Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>