force-app/main/default/objects/Detalles_Master__c/fields/Tarifa_Guia__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Guia__c</fullName>
    <formula>( Factor_Peso__c * Peso__c )+( Factor_Pieces__c * Pieces__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa Guía</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>