force-app/main/default/objects/Detalles_Master__c/fields/Tipo_Flete__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Flete__c</fullName>
    <label>Tipo Flete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>