force-app/main/default/objects/Detalles_Master__c/fields/Tracking_Ultima_Milla__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Ultima_Milla__c</fullName>
    <label>Tracking Ultima Milla</label>
    <length>80</length>
    <type>Text</type>
</CustomField>