force-app/main/default/objects/Detalles_Master__c/fields/Valor_F09__c.field-meta.xml
<CustomField>
    <fullName>Valor_F09__c</fullName>
    <label>Valor F09</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>